2008-08-04  Werner Koch  <wk@g10code.com>

	* olflange.cpp (install_forms): New.
	(GpgolExt): Install forms if needed.
	* common.c (get_data_dir): New.
	* common.h (struct): Add field FORMS_REVISION.
	* main.c (read_options, write_options): Read and write that option.

2008-07-31  Werner Koch  <wk@g10code.com>

	* ext-commands.h (class GpgolExtCommands): Add m_nCmdRevertFolder.
	* ext-commands.cpp (GpgolExtCommands, InstallCommands): Ditto.
	(DoCommand): Implement RevertFolder command.

	* common.h (struct): Add variable DISABLE_GPGOL.
	* session-events.cpp (OnDelivery): Make use of that variable.
	* message.cpp (message_incoming_handler): Ditto.
	* user-events.cpp (OnSelectionChange): Ditto
	* message-events.cpp (OnRead, OnReadComplete, OnWrite) 
	(OnWriteComplete): Ditto
	* mapihelp.cpp (mapi_get_int_prop): New.

	* olflange.cpp (Install): Improve version check.

	* revert.cpp, revert.h: New. 
	* mapihelp.cpp (mapi_attachment_to_body): New.
	(mapi_get_old_message_class): New.
	(mapi_change_message_class): Do not release newvalue when saving
	the old class.
	* olflange.cpp (parse_version_number, parse_version_string) 
	(compare_versions, gpgol_check_version): New.
	* ext-commands.cpp (DoCommand): Support a "revert message class"
	debug command.

2008-06-27  Werner Koch  <wk@g10code.com>

	* mapihelp.cpp (get_gpgololdmsgclass_tag): New.
	(mapi_change_message_class): Save old message class.

2008-06-19  Werner Koch  <wk@g10code.com>

	* olflange-dlgs.cpp (GPGOptionsDlgProc): Change S/MIME enabled
	message icon.
	* olflange.cpp (GpgolExt): Ditto for the new version installed
	notice.

2008-06-12  Werner Koch  <wk@g10code.com>

	* dialogs.rc: Add button for calling the engine's configuration.
	* dialogs.h (IDC_GPG_CONF): New.
	* engine.c (engine_start_confdialog): New.
	* engine-assuan.c (op_assuan_start_confdialog): New.
	* olflange-dlgs.cpp (GPGOptionsDlgProc): Act upon the button.

	* mapihelp.cpp (mapi_get_from_address): New.